[project]
name = "myproject"
version = "0.1.0"
description = "CS 6263 final project"
requires-python = ">=3.11"

# Pin all production dependencies here. No floating versions.
# This is just a starting point; add more as your project needs them.
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.4",
    "anthropic==0.40.0",
    "loguru==0.7.2",
]

[project.optional-dependencies]
# Tools the TA runs during grading. These are NOT optional in practice.
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
    "black==24.4.2",
    "mypy==1.10.0",
    "locust==2.27.0",
    "pip-audit==2.7.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "user_story: associate a test with a user story ID, e.g. @pytest.mark.user_story('US-01')",
]
addopts = "-q --strict-markers"

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/myproject"]
branch = true
# Exclude generated and migration code from coverage; if you don't have any,
# remove these patterns.
omit = [
    "src/myproject/__main__.py",
]

[tool.coverage.report]
# The grading script enforces 70% via --cov-fail-under in the Makefile.
# Setting it here too is belt-and-suspenders.
fail_under = 70
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Ruff (lint)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # we use black for line length

# ---------------------------------------------------------------------------
# Black (format)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Mypy (types)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
